# backend/controllers/auth/register_controller.go
@@ -1,8 +1,10 @@
 package controllers_auth
 
 import (
+	workspace_controller "backend/controllers/workspace"
 	"backend/db"
 	dtos_auth "backend/dtos/auth"
+	dtos_workspace "backend/dtos/workspace"
 	models_auth "backend/models/auth"
 	"backend/services"
 	"backend/utils"
@@ -57,7 +59,6 @@ func Register(c *gin.Context) {
 		return
 	}
 
-	// Generate verification token
 	token, err := utils.GenerateVerificationToken()
 	if err == nil {
 		otpRecord := models_auth.OTP{
@@ -76,6 +77,20 @@ func Register(c *gin.Context) {
 		verificationLink := frontendURL + "/verify-email?token=" + token
 		emailService := services.NewEmailService()
 		go emailService.SendEmailVerification(newUser.Email, newUser.Username, verificationLink)
+	}
+	var workspaceBody dtos_workspace.CreateWorkspaceDTO
+	workspaceBody.Name = userBody.Username + "'s Workspace" //TODO: later i will add to fix if username is too big or i should just put usernma validation at registertion
+	workspace, err := workspace_controller.CreateWorkspaceInternal(workspaceBody, newUser.ID)
+
+	var workspaceMember dtos_workspace.AddMemberDTOInternal
+	workspaceMember.UserID = newUser.ID
+	workspaceMember.WorkspaceID = workspace.ID
+	workspaceMember.InvitedByID = newUser.ID
+	workspaceMember.RoleID = 1 //TODO: later i will add to fix role to take owner role from db not
+	_, err = workspace_controller.AddWorkspaceMemberInternal(workspaceMember)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to add user to workspace"})
+		return
 	}
 
 	emailService := services.NewEmailService()
